--- a/web/servicios.html
+++ b/web/servicios.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/bootstrap-social.css">
     <link rel="stylesheet" href="css/main.css">
-    <title>DN9 Soluciones</title>
+    <title>Servicios</title>
 </head>
 <body>
 
@@ -26,9 +26,9 @@
         </button>
         <div class="collapse navbar-toggleable-md container" id="navbarResponsive">
             <ul class="nav navbar-nav">
-                <li class="nav-item"><a class="nav-link active" href="index.html">Dn9</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html">Dn9</a></li>
                 <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
-                <li class="nav-item"><a class="nav-link" href="servicios.html">Servicios</a></li>
+                <li class="nav-item"><a class="nav-link active" href="servicios.html">Servicios</a></li>
                 <li class="nav-item"><a class="nav-link" href="preguntas.html">Preguntas Fecuentes</a></li>
                 <li class="nav-item"><a class="nav-link" href="costos.html">Costos CFDI</a></li>
                 <li class="nav-item dropdown">
@@ -46,62 +46,8 @@
         </div>
     </nav>
 
-    <!--SLIDE-->
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active left">
-                <img src="images/shutterstock_111119858.jpg" class="img-fluid"
-                     data-holder-rendered="true">
-                <div class="carousel-caption">
-                    <h3>First slide label</h3>
-                    <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                </div>
-            </div>
-            <div class="carousel-item next left">
-                <img src="images/shutterstock_185618411.jpg" class="img-fluid"
-                     data-holder-rendered="true">
-                <div class="carousel-caption">
-                    <h3>Second slide label</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="images/shutterstock_302508602.jpg" class="img-fluid"
-                     data-holder-rendered="true">
-                <div class="carousel-caption">
-                    <h3>Third slide label</h3>
-                    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-                </div>
-            </div>
-        </div>
-        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-            <span class="icon-prev" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-            <span class="icon-next" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-
-    <div class="container"><hr>
-        <!--BUTTONS-->
-        <div class="container">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
-                <a class="btn btn-success btn-lg btn-block"><span class="text-white">Sistema de Facturación</span></a><br>
-            </div>
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
-                <a class="btn btn-success btn-lg btn-block"><span class="text-white">Sistema de Nómina</span></a><br>
-            </div>
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
-                <a class="btn btn-success btn-lg btn-block"><span class="text-white">Sistema de POS</span></a>
-            </div>
-        </div><br>
+    <div class="container bg-white">
+        <h1>Nuestros Servicios</h1><hr>
         <!--CARDS-->
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
@@ -203,53 +149,6 @@
             </div>
         </div>
     </div><hr>
-
-    <!--INFO EN AZUL-->
-    <div class="container">
-        <div class="card card-inverse bg-blue">
-            <div class="card-block">
-                <h3 class="card-title">Te ayudamos a Encontrar tu mejor Solución.</h3>
-                <p class="card-text text-white text-justify">En DN9 Soluciones  , diseñamos , creamos e implementamos soluciones innovadoras en TI , ocupando herramientas de vanguardiametodologías comprobadas y estándares internacionales , presentando nuestro desarrollo de software en 3 divisiones :</p>
-                <p class="card-text text-white text-justify">Desarrollo de sistemas a la medida</p>
-                <p class="card-text text-white text-justify">Mantenimiento a sistemas correctivo , evolutivo y preventivo.</p>
-                <p class="card-text text-white text-justify">Integración de Sistemas Desarrollo de aplicaciones financieras</p>
-                <p class="card-text text-white text-justify">Desarrollo de drivers para scanners de cheques , depósitos remotos , firma electrónica .</p>
-                <p class="card-text text-white text-justify">Desarrollo de aplicaciones distribuidas seguras (WCF) Servicios administrados de sistemas.</p>
-                <p class="card-text text-white text-justify">Soporte y mantenimiento de aplicaciones incluyendo Planeación , definición , diseño , construcción , pruebas e implementación.</p>
-                <p class="card-text text-white text-justify">Nuestro equipo de trabajo está certificado en las mejores tecnologías y continuamente promovemos su preparación en certificaciones de alto impacto.</p>
-                <p class="card-text text-white text-justify">Certificaciones en : Sun Certified Web Componet Developer Java 2 Platform Sun Certificed Programmer for the Java 5 Platform Microsoft Certified TechnologySpecialist Cisco Certified Network Associate Cisco Certified Network Professional Comptia Security+ Fortinet Certified Network Security Professional Manejo de Herramientas en :Public Key Infraestructure IBM Websphere Microsoft .NET Plataform Oracle Solaris / Unix Perl , ANSI C / C++ Eclipse , Spring , Struts , Tapestry , Etc.</p>
-            </div>
-        </div>
-    </div>
-
-    <!--INFO EN BLANCO-->
-    <div class="container">
-        <div class="card ">
-            <div class="card-block">
-                <h3 class="card-title text-gray-dark text-sm-center">¿Qué es un sistema SaaS?​</h3>
-                <p class="card-text text-gray-dark text-justify">Un sistema SaaS o Software as a Service, es un modelo de distribución de software en el que tanto el software como los datos manejados son centralizados y alojados en un único servidor externo a la empresa. Esto implica que el software utilizado por la empresa no se encuentra en la misma, sino que un proveedor se ocupa del hosting de dicho  software en la nube, así como del mantenimiento y el soporte.</p>
-                <p class="card-text text-gray-dark text-justify">La empresa contratante accede al software y todos sus datos a través de un navegador web desde cualquier ordenador. Eso quiere decir que toda la información, procesos, resultados, etc. almacenados en este software son de fácil acceso desde cualquier lugar. Tanto el software como los datos están centralizados y hospedados en un único servidor.</p>
-                <p class="card-text text-gray-dark text-justify">¿Qué implica el hecho de que podamos operar con aplicaciones alojadas en servidores externos? La principal novedad es que el uso del software ya no se basa en la instalación de la aplicación en los ordenadores locales de la empresa. Cualquier trabajador puede acceder al programa desde cualquier punto del mundo sin necesidad de instalación previa, gran ventaja para empresas que operan a nivel global. Además, se reducen los costes de licencias, mantenimiento y soporte y se mejora la movilidad.</p>
-
-                <div class="text-md-center">
-                    <img class="img-fluid rounded" src="images/saas.jpg">
-                </div><hr>
-
-                <h3 class="card-title text-gray-dark text-sm-center">Ventajas</h3>
-                <p class="card-text text-gray-dark text-justify">La implantación de un sistema SaaS para el software empresarial puede ofrecer muchas ventajas a la organización.</p>
-
-                <h5 class="card-title text-gray-dark">Reducción de tiempos</h5>
-                <p class="card-text text-gray-dark text-justify">Una de las grandes diferencias con el modelo tradicional es que en el sistema SaaS el software ya se encuentra configurado. Esto supone un importante ahorro de tiempo en la fase de instalación y configuración del software en cada uno de los ordenadores que lo van a utilizar.</p>
-
-                <h5 class="card-title text-gray-dark">Reducción de costos</h5>
-                <p class="card-text text-gray-dark text-justify">Esta centralización del software también supone una reducción en los costes de adquisición. La ubicación compartida de la aplicación reduce los costes de licencia de hardware y software, ya que el pago de un alquiler por el servicio es suficiente. Esto hace que muchas PYMES puedan acceder al uso de software especializado que en el modelo de distribución tradicional no podrían asumir debido a que supone una carga importante en sus costes de estructura.</p>
-                <p class="card-text text-gray-dark text-justify">Pero no sólo se reducen los costes de adquisición, lo mismo sucede con los gastos de mantenimiento y soporte.La  empresa proveedora del servicio SaaS también se ocupará de estos servicios, de modo que la empresa contratante no necesita un departamento interno especializado en ello y se puede despreocupar de este punto.</p>
-
-                <h5 class="card-title text-gray-dark">Escalabilidad e integración</h5>
-                <p class="card-text text-gray-dark text-justify">Generalmente las soluciones SaaS operan en un contexto Cloud que se puede escalar e integrar con otras soluciones de Software as a Service. Si lo comparamos con el modelo tradicional de distribución de software, el usuario ya no necesita comprar otra aplicación o servidor. Basta con habilitar otro sistema SaaS y encargarle su alojamiento al mismo proveedor.</p>
-            </div>
-        </div>
-    </div>
 </div>
 
 <!--FOOTER-->
